--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,13 @@
   </head>
   <body>
     <div class="main">
+      <nav class="navbar">
+        <ul class="navbar-item">
       <div class="box">
         <div class="logo navbar-item">
           <i class="fa-solid fa-bomb navbar-item"></i>
         </div>
+
         <div class="field has-addons navbar-item">
           <p class="control">
             <input
@@ -30,29 +33,41 @@
               placeholder="Search a skill"
             />
           </p>
+        </ul>
+        </nav>
           <p class="control">
             <button class="button is-rounded is-medium">Search</button>
           </p>
         </div>
 
         <a>
+          <li>
           <i class="fa-solid fa-house"></i>
+        </li>
         </a>
 
         <a>
+          <li>
           <i class="fa-solid fa-comment-dots"></i>
+          </li>
         </a>
 
         <a>
-          <i class="fa-solid fa-suitcase"></i>
+          <li>
+          <i class="fa-solid fa-suitcase">
+          </li>
         </a>
 
         <a>
+          <li>
           <i class="fa-solid fa-bell"></i>
+          </li>
         </a>
 
         <a>
-          <i class="fa-brands fa-discord"></i>
+          <li>
+          <i class="fa-brands fa-discord">
+          </li>
         </a>
       </div>
     </div>
