--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <title>HTML, CSS and SASS Boilerplate</title>
     <meta
       name="description"
-      content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
-    />
+      content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -32,14 +31,15 @@
               placeholder="Search a skill"
             />
           </p>
-        </ul>
-        </nav>
           <p class="control">
             <button class="button is-rounded is-medium">Search</button>
           </p>
+        </ul>
         </div>
 
-       <a>
+        </nav>
+
+        <a>
           <li>
           <i class="fa-solid fa-house"></i>
         </li>
@@ -72,3 +72,5 @@
     </div>
   </body>
 </html>
+
+
