--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
 
         <a>
           <li>
-          <i class="fa-solid fa-suitcase">
+          <i class="fa-solid fa-suitcase"></i>
           </li>
         </a>
 
@@ -68,7 +68,7 @@
 
         <a>
           <li>
-          <i class="fa-brands fa-discord">
+          <i class="fa-brands fa-discord"></i>
           </li>
         </a>
       </div>
